--- a/M1U3/ejemplo001.css
+++ b/M1U3/ejemplo001.css
@@ -18,7 +18,6 @@ div {
     height: 200px;
     background-color: greenyellow;
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-    border: 14px dashed #ff6550;
     margin-left: 150px;
 }
 .destacados{
@@ -26,3 +25,62 @@ div {
     font-weight: bold;
     font-size: 30px;
 }
+#contenedor{
+	border:1px solid #aaa;
+	background-color: #dddddd;
+	/* position: flex; */
+	margin:0 auto;
+	width: 60%;
+	height: 500px;
+	}
+
+#verde{
+	/* position:static; */
+	margin:0 auto;
+	height:20%;
+	width:94%;
+	border:1px solid #949782;
+	margin-bottom:20px;
+	background-color: #3ee544;
+}
+
+#celeste{
+	/* position:static; */
+	margin:0 auto;
+	height:20%;
+	width:94%;
+	border:1px solid #328EB2;
+	margin-bottom:20px;
+	background-color: #41B8E5;
+}
+
+#amarillo{
+	/* position:static; */
+	margin:0 auto;
+	height:20%;
+	width:94%;
+	border:1px solid #BCB43A;
+	margin-bottom:20px;
+	background-color: #E5DB3F;
+}
+
+.contenedor{
+	background-color: blue;
+	display: flex;
+	/*justify-content: flex-start;*/
+	/*justify-content: flex-end;*/
+	justify-content: center;
+	/* justify-content: space-between; */
+	 justify-content: space-around; 
+	/* justify-content: space-evenly; */
+}
+
+.item{
+	background-color: #ccc;
+	width: 100px;
+	height: 100px;
+	margin: 10px;
+	font-size: 30px;
+		}
+
+
