--- a/M1U3/ejemplo001.css
+++ b/M1U3/ejemplo001.css
@@ -1,5 +1,5 @@
 h2 {
-    color: red;
+    color: rgb(56, 203, 248);
     font-family: Arial;
     font-size: 55px;
     text-align: center;
@@ -16,7 +16,7 @@ p {
 div {
     width: 200px;
     height: 200px;
-    background-color: greenyellow;
+    background-color: rgb(255, 29, 40);
     box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
     margin-left: 150px;
 }
@@ -64,14 +64,14 @@ div {
 	background-color: #E5DB3F;
 }
 
-.contenedor{
+.contenedor2{
 	background-color: blue;
 	display: flex;
 	/*justify-content: flex-start;*/
 	/*justify-content: flex-end;*/
-	justify-content: center;
+	justify-content: space-between;
 	/* justify-content: space-between; */
-	 justify-content: space-around; 
+	 justify-content: space space-around; 
 	/* justify-content: space-evenly; */
 }
 
